src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Individual Donation</fullName>
        <description>Stages and probabilities specific to individual donations.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Not Pursued</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Public Funding</fullName>
        <description>Stages and probabilities specific to public funding opportunities.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Concept Submitted</fullName>
        </values>
        <values>
            <fullName>Concept in Progress</fullName>
        </values>
        <values>
            <fullName>Lead</fullName>
        </values>
        <values>
            <fullName>Not Pursued</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>World Bank Opportunity</fullName>
        <description>Opportunities specific to World Bank guidelines and specifications.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>test</fullName>
        <description>test</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Not Pursued</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>test1</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Not Pursued</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>testtest</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Amount_Received_FY09__c</fullName>
        <inlineHelpText>Sum of payments with status of received in 2009</inlineHelpText>
        <label>Amount Received FY09</label>
        <summarizedField>Payments__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payments__c.Payment_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payments__c.Payment_Date__c</field>
            <operation>greaterThan</operation>
            <value>9/30/2008</value>
        </summaryFilterItems>
        <summaryForeignKey>Payments__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Received_Old__c</fullName>
        <inlineHelpText>Sum of all Payments</inlineHelpText>
        <label>Amount Received_Old</label>
        <summarizedField>Old_Payments__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Old_Payments__c.Payment_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </summaryFilterItems>
        <summaryForeignKey>Old_Payments__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <inlineHelpText>Sum of payments with status of received</inlineHelpText>
        <label>Amount Received</label>
        <summarizedField>Payments__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payments__c.Payment_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </summaryFilterItems>
        <summaryForeignKey>Payments__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_same_as_proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount same as proposal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_Amount__c</fullName>
        <description>Actual amount solicited in proposal or ask.</description>
        <label>Ask Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concept_Due__c</fullName>
        <inlineHelpText>This is the date the concept for the proposal is due.</inlineHelpText>
        <label>Concept Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Funding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Standing__c</fullName>
        <label>Current Standing</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Year_Strategy__c</fullName>
        <label>Current Year Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Awarded__c</fullName>
        <inlineHelpText>The date Rare was notified the grant/gift was being awarded.</inlineHelpText>
        <label>Date Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <inlineHelpText>This is the date the organization/company/individual is expected to make a decision whether or not to fund this project.</inlineHelpText>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Final_Financial_Report_Send_Date__c</fullName>
        <label>Final Financial Report Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Financial_Reporting_Date__c</fullName>
        <label>Final Financial Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Programmatic_Report_Send_Date__c</fullName>
        <label>Final Programmatic Report Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Programmatic_Reporting_Date__c</fullName>
        <label>Final Programmatic Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Reporting_Date_Final__c</fullName>
        <label>Financial Reporting Date Final</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Reporting_Date_Interim__c</fullName>
        <label>Financial Reporting Date Interim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Reporting_Requirements__c</fullName>
        <label>Financial Reporting Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Actuals Against Approved Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuals Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narrative Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Foundation_Feedback_Survey_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foundation Feedback Survey Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Close_FY__c</fullName>
        <formula>TEXT(YEAR(CloseDate+92))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Close FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Allocated_to_Segment__c</fullName>
        <inlineHelpText>Choose segment this gift should be counted under for board report</inlineHelpText>
        <label>Gift Allocated to Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO/Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Revenue (ex. trip payment)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_Code__c</fullName>
        <label>Grant Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Description__c</fullName>
        <label>Grant Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grant_End_Date__c</fullName>
        <label>Grant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Manager_Approval_Date__c</fullName>
        <label>Grant Manager Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Name__c</fullName>
        <label>Grant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <label>Grant Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant_Payment_Method__c</fullName>
        <label>Grant Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Single Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimbursements</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_Start_Date__c</fullName>
        <label>Grant Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Summary__c</fullName>
        <label>Grant Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Term__c</fullName>
        <label>Grant Term (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_amount_same_as_proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grant amount same as proposal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_amount_not_same_as_proposal_describe__c</fullName>
        <label>If amount not same as proposal, describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_other_requirements_describe__c</fullName>
        <label>If other requirements, describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Kind_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Kind Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Forecast__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do you want this opportunity included in forecast reports?</inlineHelpText>
        <label>Include in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interim_Financial_Report_Send_Date__c</fullName>
        <label>Interim Financial Report Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Financial_Reporting_Date_2__c</fullName>
        <label>Interim Financial Reporting Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Financial_Reporting_Date_3__c</fullName>
        <label>Interim Financial Reporting Date #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Financial_Reporting_Date__c</fullName>
        <label>Interim Financial Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Programmatic_Report_Send_Date__c</fullName>
        <label>Interim Programmatic Report Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Programmatic_Reporting_Date_2__c</fullName>
        <label>Interim Programmatic Reporting Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Programmatic_Reporting_Date_3__c</fullName>
        <label>Interim Programmatic Reporting Date #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Programmatic_Reporting_Date__c</fullName>
        <label>Interim Programmatic Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Reporting_Date_2__c</fullName>
        <label>Interim Reporting Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Report_Submission_Date__c</fullName>
        <label>Last Report Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_for_Individual_Donors__c</fullName>
        <description>Individual Giving Markets</description>
        <label>Market (for Individual Donors)</label>
        <picklist>
            <controllingField>Gift_Allocated_to_Segment__c</controllingField>
            <picklistValues>
                <fullName>Boston (NH, MA, ME, RI, VT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago (IL, WI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York (CT, PA, NJ, NY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington DC (DC, MD, VA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER US (East Coast, Midwest, and South)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER US (Western States)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNATIONAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Payment_Date__c</fullName>
        <description>The most recent payment date from the Payments related list.</description>
        <label>Most Recent Payment Date</label>
        <summarizedField>Payments__c.Payment_Date__c</summarizedField>
        <summaryForeignKey>Payments__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Needs_Manual_Cleanup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Manual Cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field indicates if the activity in the proposed grant is a new activity. If so, a budget amendment will be required - Check if YES</inlineHelpText>
        <label>New Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Installments__c</fullName>
        <description>Number of payments for a particular funding record.</description>
        <label>Num Installments</label>
        <summaryForeignKey>Payments__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Years__c</fullName>
        <label>Number of Years</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Grant_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Grant Record</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Realized__c</fullName>
        <description>Will return true if the amount received equals the gift amount.</description>
        <formula>IF(Amount_Received__c  =  Amount, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Realized?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payee_Code__c</fullName>
        <label>Payee Code</label>
        <picklist>
            <picklistValues>
                <fullName>Same Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Memorial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payments</label>
        <referenceTo>Old_Payments__c</referenceTo>
        <relationshipLabel>Financials</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pledge_Made_Date__c</fullName>
        <label>Pledge Made Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Programmatic_Reporting_Date_Final__c</fullName>
        <label>Programmatic Reporting Date Final</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Programmatic_Reporting_Date_Interim__c</fullName>
        <label>Programmatic Reporting Date Interim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Programmatic_Reporting_Date_Other__c</fullName>
        <label>Programmatic Reporting Date Other</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Total__c</fullName>
        <formula>Amount  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <inlineHelpText>This is the proposal deadline</inlineHelpText>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Mail_Date__c</fullName>
        <inlineHelpText>This is the date you actually sent the report in.</inlineHelpText>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Review_Deadline__c</fullName>
        <inlineHelpText>The date the proposal must be reviewed by befor submission</inlineHelpText>
        <label>Proposal Review Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RARE_Grant_Manager__c</fullName>
        <label>RARE Grant Manager</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RARE_Project_Manager__c</fullName>
        <label>RARE Project Manager</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requires_Board_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Board Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restriction_Notes__c</fullName>
        <label>Restriction Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Restrictions__c</fullName>
        <label>Restrictions</label>
        <picklist>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Group Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Type Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Federal Grant Restrictions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Solicitation_Response__c</fullName>
        <label>Solicitation Response</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Memorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earthshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Payment_ID__c</fullName>
        <label>Source Payment ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <label>Special Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submission_Ask_Date__c</fullName>
        <label>Submission/Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Expense_Type_or_Other_Restrictions__c</fullName>
        <inlineHelpText>Field to explain any grant restrictions other than Program/Project restrictions, such as:  
1)Time restriction
2)Expense Type Restriction below Project Code 
3)Required matching amount and restrictions
4)Applicable US federal grant restrictions</inlineHelpText>
        <label>Time, Expense-Type or Other Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Top_Five_Moves_to_Solicitation__c</fullName>
        <label>Top Five Moves to Solicitation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Awarded__c</fullName>
        <label>Total Awarded</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments_Old__c</fullName>
        <label>Total Payments - Old</label>
        <summarizedField>Old_Payments__c.Payment_Amount__c</summarizedField>
        <summaryForeignKey>Old_Payments__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <inlineHelpText>Sum of all payments expected and received</inlineHelpText>
        <label>Total Payments</label>
        <summarizedField>Payments__c.Payment_Amount__c</summarizedField>
        <summaryForeignKey>Payments__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VP_Finance_Approval_Date__c</fullName>
        <label>VP Finance Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_Finance_Name__c</fullName>
        <label>VP Finance Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Programs_Approval_Date__c</fullName>
        <label>VP Programs Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_Programs_Name__c</fullName>
        <label>VP Programs Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllProposals</fullName>
        <filterScope>Everything</filterScope>
        <label>All Proposals</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>CreatedNewfromGrantRecords</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>2/12/2008 12:00 AM</value>
        </filters>
        <label>Created New from Grant Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Funding_Owned_by_Elan</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Proposal_Due_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>elan</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Proposal Lead,In Progress,Submission/Ask</value>
        </filters>
        <label>Funding Owned by Elan</label>
        <language>en_US</language>
    </listViews>
</CustomObject>